[package]
name = "hugo-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
clap_derive = "4.5.13"
http = "1.1"
libc = "*"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rusqlite = { version = "0.32", features = ["blob", "chrono"] }
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
